pkg/deps/testdata/ub/manifest/invalid/unobin-required.ub
manifest: {
  requires: {
    'github.com/cloudboss/unobin': 'v0.5.0'
  }
}
